--- a/home-manager/hyprland/waybar/config
+++ b/home-manager/hyprland/waybar/config
@@ -7,7 +7,7 @@
 	"fixed-center": false,
 	"ipc": true,
 	"margin-top": 0,
-	//"margin-bottom": 5,
+	"margin-bottom": 0,
 		
 	"modules-left": [
 		"hyprland/workspaces"
@@ -18,10 +18,15 @@
 	], 
 		
 	"modules-right": [
+		"custom/separator#vertical-line",
+		"tray",
+		"custom/separator#vertical-line",
+		"power-profiles-daemon",
+		"network",
+		"custom/separator#vertical-line",
+		"pulseaudio",
 		"cpu",
-		"custom/separator#vertical-line",
 		"memory",
-		"custom/separator#vertical-line",
 		"battery",
 		"custom/separator#vertical-line",
 		"custom/power"
@@ -64,7 +69,7 @@
 		  "format-full": "{icon} Full",
 		  "format-alt": "{icon} {time}",
 		  "format-icons": ["", "", "", "", ""],
-		  "format-time": "{H}h {M}min",
+		  "format-time": " {H}h {M}min",
 		  "tooltip": true,
 		  "tooltip-format": "{timeTo} {power}w",
 	},
@@ -89,8 +94,39 @@
 		"interval": "once",
 		"tooltip": false
 	},
-
-
+	"pulseaudio": {
+		  "format": "{icon} {volume}%",
+		  "format-bluetooth": "{icon} {volume}%",
+		  "format-bluetooth-muted": " {icon}",
+		  "format-muted": "󰸈",
+		  "format-icons": {
+		    "headphone": "",
+		    "hands-free": "",
+		    "headset": "",
+		    "phone": "",
+		    "portable": "",
+		    "car": "",
+		    "default": ["", "", ""]
+		  },
+		  "tooltip": false,
+		  "scroll-step": 5.0,
+		  "on-click": "~/hyprflake/scripts/volume.sh --toggle",
+		  "on-click-right": "pavucontrol -t 3",
+		  "on-scroll-up": "~/hyprflake/scripts/volume.sh --inc",
+		  "on-scroll-down": "~/hyprflake/scripts/volume.sh --dec",
+		  "smooth-scrolling-threshold": 1,
+		},
+	
+		"pulseaudio#microphone": {
+		  "format": "{format_source}",
+		  "format-source": " {volume}%",
+		  "format-source-muted": "",
+		  "on-click": "~/hyprflake/scripts/volume.sh --toggle-mic",
+		  "on-click-right": "pavucontrol -t 4",
+		  "on-scroll-up": "~/hyprflake/scripts/volume.sh --mic-inc",
+		  "on-scroll-down": "~/hyprflake/scripts/volume.sh --mic-dec",
+		  "scroll-step": 5,
+		},
 	"network": {
 	  "format": "{ifname}",
 	  "format-wifi": "{icon}",
@@ -108,5 +144,20 @@
 		  "format": "⏻ ",
 		  "tooltip": false,
 		  "on-click": "~/hyprflake/scripts/power_menu.sh"
+	},
+	"power-profiles-daemon": {
+	  "format": "{icon}",
+	  "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+	  "tooltip": true,
+	  "format-icons": {
+	    "default": "",
+	    "performance": "",
+	    "balanced": "",
+	    "power-saver": ""
+	  }
+	},
+	"tray": {
+		  "icon-size": 16,
+		  "spacing": 8
 	},
 }
