pipewire, xdg portal, backlight

--- a/home-manager/hyprland/waybar/config
+++ b/home-manager/hyprland/waybar/config
@@ -10,21 +10,23 @@
 	"margin-bottom": 0,
 		
 	"modules-left": [
+		"clock",
 		"hyprland/workspaces"
 	],
 	  
 	"modules-center": [
-		"clock"
+		
 	], 
 		
 	"modules-right": [
-		"custom/separator#vertical-line",
 		"tray",
 		"custom/separator#vertical-line",
 		"power-profiles-daemon",
 		"network",
 		"custom/separator#vertical-line",
 		"pulseaudio",
+		"backlight",
+		"custom/separator#vertical-line",
 		"cpu",
 		"memory",
 		"battery",
@@ -94,39 +96,6 @@
 		"interval": "once",
 		"tooltip": false
 	},
-	"pulseaudio": {
-		  "format": "{icon} {volume}%",
-		  "format-bluetooth": "{icon} {volume}%",
-		  "format-bluetooth-muted": " {icon}",
-		  "format-muted": "󰸈",
-		  "format-icons": {
-		    "headphone": "",
-		    "hands-free": "",
-		    "headset": "",
-		    "phone": "",
-		    "portable": "",
-		    "car": "",
-		    "default": ["", "", ""]
-		  },
-		  "tooltip": false,
-		  "scroll-step": 5.0,
-		  "on-click": "~/hyprflake/scripts/volume.sh --toggle",
-		  "on-click-right": "pavucontrol -t 3",
-		  "on-scroll-up": "~/hyprflake/scripts/volume.sh --inc",
-		  "on-scroll-down": "~/hyprflake/scripts/volume.sh --dec",
-		  "smooth-scrolling-threshold": 1,
-		},
-	
-		"pulseaudio#microphone": {
-		  "format": "{format_source}",
-		  "format-source": " {volume}%",
-		  "format-source-muted": "",
-		  "on-click": "~/hyprflake/scripts/volume.sh --toggle-mic",
-		  "on-click-right": "pavucontrol -t 4",
-		  "on-scroll-up": "~/hyprflake/scripts/volume.sh --mic-inc",
-		  "on-scroll-down": "~/hyprflake/scripts/volume.sh --mic-dec",
-		  "scroll-step": 5,
-		},
 	"network": {
 	  "format": "{ifname}",
 	  "format-wifi": "{icon}",
@@ -159,5 +128,56 @@
 	"tray": {
 		  "icon-size": 16,
 		  "spacing": 8
+	},
+	"pulseaudio": {
+		  "format": "{icon} {volume}%",
+		  "format-bluetooth": "{icon} {volume}%",
+		  "format-bluetooth-muted": " {icon}",
+		  "format-muted": "󰸈 ",
+		  "format-icons": {
+		    "headphone": "",
+		    "hands-free": "",
+		    "headset": "",
+		    "phone": "",
+		    "portable": "",
+		    "car": "",
+		    "default": ["", "", ""]
+		  },
+		  "tooltip": false,
+		  "scroll-step": 5.0,
+		  "on-click": "~/hyprflake/scripts/volume.sh --toggle",
+		  "on-click-right": "pavucontrol -t 3",
+		  "on-scroll-up": "~/hyprflake/scripts/volume.sh --inc",
+		  "on-scroll-down": "~/hyprflake/scripts/volume.sh --dec",
+		  "smooth-scrolling-threshold": 1,
+	},
+	
+	"pulseaudio#microphone": {
+	  "format": "{format_source}",
+	  "format-source": " {volume}%",
+	  "format-source-muted": "",
+	  "on-click": "~/hyprflake/scripts/volume.sh --toggle-mic",
+	  "on-click-right": "pavucontrol -t 4",
+	  "on-scroll-up": "~/hyprflake/scripts/volume.sh --mic-inc",
+	  "on-scroll-down": "~/hyprflake/scripts/volume.sh --mic-dec",
+	  "scroll-step": 5,
+	},
+	"backlight": {
+		  "interval": 2,
+		  "align": 0,
+		  "rotate": 0,
+		  //"format": "{icon} {percent}%",
+		  //"format-icons": ["󰃞", "󰃟", "󰃠"],
+		  "format": "{icon} {percent}%",
+		  "format-icons": ["󰛩", "󱩎", "󱩏", "󱩑", "󱩒", "󱩓", "󱩔", "󱩕", "󰛨"],
+		  "tooltip-format": "backlight {percent}%",
+		  "icon-size": 10,
+		  "on-click": "",
+		  "on-click-middle": "",
+		  "on-click-right": "",
+		  "on-update": "",
+		  "on-scroll-up": "",
+		  "on-scroll-down": "",
+		  "smooth-scrolling-threshold": 1,
 	},
 }
